k8s/mineru-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mineru
  annotations:
    kubernetes.io/ingress.internet: "false"
    kubernetes.io/ingress.subnetId: "subnet-pac3o08j"
    nginx.ingress.kubernetes.io/proxy-body-size: "500m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  ingressClassName: qcloud
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mineru
                port:
                  number: 8000
